--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -9,8 +9,7 @@
         "outDir": "dist",
         "allowJs": true,
         "resolveJsonModule": true,
-        "jsx": "react",
-        "declaration": true
+        "jsx": "react"
     },
 
     "include": [
