--- a/packages/github/package.json
+++ b/packages/github/package.json
@@ -8,16 +8,13 @@
         "build": "npx tsc"
     },
     "dependencies": {
-        "@types/node-fetch": "^2.5.12",
-        "cheerio": "^1.0.0-rc.10",
+        "common": "*",
         "java-without-the-tears": "^1.0.8",
         "moment": "^2.29.1",
-        "node-fetch": "2.6.1",
         "octokit": "^1.5.0"
     },
     "devDependencies": {
         "@octokit/types": "^6.26.0",
-        "@types/cheerio": "^0.22.30",
         "typescript": "^4.4.2"
     }
 }
