--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -8,13 +8,14 @@
         "build": "npx tsc"
     },
     "dependencies": {
-        "@types/cors": "^2.8.12",
         "cors": "^2.8.5",
+        "common": "*",
         "express": "^4.17.1",
-        "github": "^14.0.0",
+        "github": "*",
         "java-without-the-tears": "^1.0.8"
     },
     "devDependencies": {
+        "@types/cors": "^2.8.12",
         "@types/express": "^4.17.13",
         "typescript": "^4.4.2"
     }
